[package]
name = "page_size"
version = "0.1.0"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]

[features]
no-std = ["spin"]

[dependencies]

spin = { version = "^0.4.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "^0.2.31"

[target.'cfg(windows)'.dependencies]
winapi = "^0.2.8"