[package]
name = "page_size"
version = "0.1.1"
authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]
description = "Provides an easy, fast, cross-platform way to retrieve the memory page size"
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/page_size/"
homepage = "https://github.com/Elzair/page_size_rs"
repository = "https://github.com/Elzair/page_size_rs"
keywords = ["page", "memory", "ram", "page_size"]
categories = ["hardware-support", "os"]

[features]
no-std = ["spin"]

[dependencies]

spin = { version = "^0.4.5", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "^0.2.31"

[target.'cfg(windows)'.dependencies]
winapi = "^0.2.8"